<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">




    <group
        android:id="@+id/group_menu_1">

        <item
            android:id="@+id/menu_search"
            android:icon="@mipmap/ic_search_white_24dp"
            android:title="@string/menu_search"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/menu_sort"
            android:icon="@mipmap/ic_sort_white_24dp"
            android:title="@string/menu_sort"
            app:showAsAction="ifRoom"/>



    </group>



    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
