<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.andri.bonappetit.FormActivity"
    tools:showIn="@layout/activity_form">



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Nom du repas"
                android:id="@+id/meal_name_label" />
            <EditText android:id="@+id/meal_name"
                android:layout_below="@id/meal_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/meal_name" />

            <TextView
                android:layout_below="@+id/meal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Description du repas"
                android:id="@+id/meal_description_label" />

            <EditText android:id="@+id/meal_description"
                android:layout_below="@+id/meal_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginBottom="10dp"
                android:hint="@string/meal_description_hint" />

            <TextView
                android:layout_below="@+id/meal_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Lieu"
                android:id="@+id/meal_location_label" />
            <EditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:id="@+id/meal_location"
                android:hint="@string/location_hint"
                android:layout_below="@+id/meal_location_label"
                android:layout_marginBottom="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_below="@+id/meal_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Nombre de places"
                android:id="@+id/meal_seats_label" />
            <EditText
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="2"
                android:id="@+id/meal_seats"
                android:layout_below="@+id/meal_seats_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_below="@+id/meal_seats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Date et heure"
                android:id="@+id/meal_date_label" />

            <TextView
                android:layout_below="@+id/meal_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone"
                android:id="@+id/time_picked_label" />


            <Button
                android:onClick="showDatePickerDialog"
                android:layout_width="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:text="Choisir une date"
                android:id="@+id/button_date_pick"
                android:layout_below="@+id/time_picked_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_below="@+id/button_date_pick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Prix unitaire du repas (en euros)"
                android:id="@+id/meal_price_label" />
            <EditText
                android:hint="(€)"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="2"
                android:id="@+id/meal_price"
                android:layout_below="@+id/meal_price_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />



        </RelativeLayout>

    </ScrollView>


</RelativeLayout>